compiler/tests/run_pass/array.lg
/* Copyright 2013 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

task fill(is: ispace<int>, r: array<is, int>)
  , writes(r)
{
  for i in is {
    r[i] = i;
  }
}

task sum(is: ispace<int>, r: array<is, int>): int
  , reads(r)
{
  var a = 0;
  for i in is {
    a += r[i];
  }
  return a;
}

task main()
{
  let is = ispace<int>(6);
  let r = array<is, int>();
  fill(is, r);
  assert sum(is, r) == 15;
}
