compiler/tests/compile_fail/type_mismatch_array5.lg
/* Copyright 2013 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#line 0

// fails-with:
// TypeError:
// tests/compile_fail/type_mismatch_array5.lg:17:2:
// Type mismatch for argument 1 in call to task foo: expected array<is, double> but got array<is, float>

task main() {}

task foo(is: ispace<int>, a: array<is, double>): double
  , reads(a)
{
  return a[0];
}

task bar(is: ispace<int>, a: array<is, float>): float
  , reads(a)
{
  foo(is, a);
}
